// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contract cannot be implemented 1`] = `
"snippetCode.ts (4,13): Class 'MyContract' incorrectly implements interface 'Contract'.
  Property 'script' is missing in type 'MyContract'.

      2 |       import { Contract } from '@neo-one/smart-contract';
      3 | 
    > 4 |       class MyContract implements Contract {
        |             ^
      5 |       }
      6 |     
"
`;

exports[`Contract invalid "reference" 1`] = `
"snippetCode.ts (4,28): Builtin properties cannot be referenced

      2 |       import { Contract } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Contract['for'];
        |                            ^
      5 |     
"
`;

exports[`Contract invalid reference - object 1`] = `
"snippetCode.ts (4,15): Builtin properties cannot be referenced

      2 |       import { Contract } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const { for } = Contract;
        |               ^
      5 |     
"
`;

exports[`Contract invalid reference 1`] = `
"snippetCode.ts (4,28): Builtin properties cannot be referenced

      2 |       import { Contract } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Contract.for;
        |                            ^
      5 |     
"
`;
